# api-message-consumer

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/services/: message_consumer_service.py
